--- a/scss/components/header.scss
+++ b/scss/components/header.scss
@@ -8,6 +8,9 @@ header {
 
   ul li {
     list-style: none;
+    color: #787777;
+    display: flex;
+    align-items: center;
   }
 
   ul li:not(:first-of-type) {
@@ -18,6 +21,8 @@ header {
     font-family: "Lato", sans-serif;
     margin-left: 5px;
     //border: 1px solid;
+    color: #787777;
+    display: inline-block;
   }
 
   .row {
